aver ahora cordova.js

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
 		
 		<script src="plugins/com.ionic.keyboard/www/keyboard.js"></script>
 		
