--- a/index.html
+++ b/index.html
@@ -44,27 +44,66 @@
 	<script src="js/controllers/myTrip/settingsCtrl.js"></script>
 	<script src="js/services/WebService.js"></script>
 	
-	<!--
+
 	<script>
-	
-		var dt = new Date().getTime();
-		var base_link;
-		base_link = 'http://192.168.138.13/callmycab/Source/js/';
-	  
-		document.write('<script src="http://192.168.138.13/callmycab/Source/config.js?v='+dt+'"><\/script>');
-		
-		document.write('<script src="'+base_link+'app.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/controllers.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/land/landInit.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/land/landCtrl.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/myTrip/myTripCtrl.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/myTrip/rateCardCtrl.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'controllers/myTrip/settingsCtrl.js?v='+dt+'"><\/script>');
-		document.write('<script src="'+base_link+'services/WebService.js?v='+dt+'"><\/script>');
-	
+
+var pictureSource;   // picture source
+var destinationType; // sets the format of returned value
+ 
+document.addEventListener("deviceready", onDeviceReady, false);
+ 
+function onDeviceReady() {
+    pictureSource = navigator.camera.PictureSourceType;
+    destinationType = navigator.camera.DestinationType;
+}
+ 
+function clearCache() {
+    navigator.camera.cleanup();
+}
+ 
+var retries = 0;
+function onCapturePhoto(fileURI) {
+    var win = function (r) {
+        clearCache();
+        retries = 0;
+        alert('Done!');
+    }
+ 
+    var fail = function (error) {
+        if (retries == 0) {
+            retries ++
+            setTimeout(function() {
+                onCapturePhoto(fileURI)
+            }, 1000)
+        } else {
+            retries = 0;
+            clearCache();
+            alert('Ups. Something wrong happens!');
+        }
+    }
+ 
+    var options = new FileUploadOptions();
+    options.fileKey = "file";
+    options.fileName = fileURI.substr(fileURI.lastIndexOf('/') + 1);
+    options.mimeType = "image/jpeg";
+    options.params = {}; // if we need to send parameters to the server request
+    var ft = new FileTransfer();
+    ft.upload(fileURI, encodeURI("http://173.230.140.74/fotos.php"), win, fail, options);
+}
+ 
+function capturePhoto() {
+    navigator.camera.getPicture(onCapturePhoto, onFail, {
+        quality: 100,
+        destinationType: destinationType.FILE_URI
+    });
+}
+ 
+function onFail(message) {
+    alert('Failed because: ' + message);
+}
 	
 	</script>
-	-->
+
 	<script src="js/directive.js"></script>  
 	
 	
