--- a/index.html
+++ b/index.html
@@ -1,40 +1,118 @@
+<!DOCTYPE html>
 <html>
-<head>
- <title>File Transfer Example</title>
- <script type="text/javascript" src="cordova.js"></script>
- <script type="text/javascript">
- function getImage() {
- navigator.camera.getPicture(uploadPhoto, function(message) {
- alert('get picture failed');
- }, {
- quality: 100,
- destinationType: navigator.camera.DestinationType.FILE_URI,
- sourceType: navigator.camera.PictureSourceType.PHOTOLIBRARY
- });
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+
+		<script src="phonegap.js"></script>
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+	
+	<link rel="stylesheet" href="css/main.css"> 
+	<link rel="stylesheet" href="css/common.css">
+	<link rel="stylesheet" href="css/theme.css">
+
+    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <link href="css/ionic.app.css" rel="stylesheet">
+    -->
+	<script src="assets/jquery/jquery-1.10.2.min.js"></script>
+    <!-- ionic/angularjs js -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+	
+		 <!-- ng cordova js -->
+  <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
+		
+    <!-- cordova script (this will be a 404 during development) -->
+    <script src="cordova.js"></script>
+		
+		<script src="plugins/com.ionic.keyboard/www/keyboard.js"></script>
+		
+	<!-- Google Map -->
+	<script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBksdkjWFIfdMS_IhY8sEit6r9IPrPq-lA&amp;sensor=true&amp;libraries=places"></script>
+	
+	
+	
+  <script src="config.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/controllers.js"></script>
+	<script src="js/controllers/land/landInit.js"></script>
+	<script src="js/controllers/land/landCtrl.js"></script>
+	<script src="js/controllers/myTrip/myTripCtrl.js"></script>
+	<script src="js/controllers/myTrip/rateCardCtrl.js"></script>
+	<script src="js/controllers/myTrip/settingsCtrl.js"></script>
+	<script src="js/services/WebService.js"></script>
+	
+
+	<script>
+
+var pictureSource;   // picture source
+var destinationType; // sets the format of returned value
+ 
+document.addEventListener("deviceready", onDeviceReady, false);
+ 
+function onDeviceReady() {
+    pictureSource = navigator.camera.PictureSourceType;
+    destinationType = navigator.camera.DestinationType;
 }
+ 
+function clearCache() {
+    navigator.camera.cleanup();
+}
+ 
+var retries = 0;
+function onCapturePhoto(fileURI) {
+    var win = function (r) {
+        clearCache();
+        retries = 0;
+        alert('Done!');
+    }
+ 
+    var fail = function (error) {
+        if (retries == 0) {
+            retries ++
+            setTimeout(function() {
+                onCapturePhoto(fileURI)
+            }, 1000)
+        } else {
+            retries = 0;
+            clearCache();
+            alert('Ups. Something wrong happens!');
+        }
+    }
+ 
+    var options = new FileUploadOptions();
+    options.fileKey = "file";
+    options.fileName = fileURI.substr(fileURI.lastIndexOf('/') + 1);
+    options.mimeType = "image/jpeg";
+    options.params = {}; // if we need to send parameters to the server request
+    var ft = new FileTransfer();
+    ft.upload(fileURI, encodeURI("http://173.230.140.74/fotos.php"), win, fail, options);
+}
+ 
+function capturePhoto() {
+    navigator.camera.getPicture(onCapturePhoto, onFail, {
+        quality: 100,
+        destinationType: destinationType.FILE_URI
+    });
+}
+ 
+function onFail(message) {
+    alert('Failed because: ' + message);
+}
+	
+	</script>
 
-function uploadPhoto(imageURI) {
- var options = new FileUploadOptions();
- options.fileKey = "file";
- options.fileName = imageURI.substr(imageURI.lastIndexOf('/') + 1);
- options.mimeType = "image/jpeg";
- console.log(options.fileName);
- var params = new Object();
- params.value1 = "test";
- params.value2 = "param";
- options.params = params;
- options.chunkedMode = false;
+	<script src="js/directive.js"></script>  
+	
+	
+	<!-- your app's js -->
+	<!-- <script src="assets/ngautocomplete/ngautocomplete.js"></script> -->
+	
+  </head>
 
-var ft = new FileTransfer();
- ft.upload(imageURI, "http://173.230.140.74/upload.php", function(result){
- console.log(JSON.stringify(result));
- }, function(error){
- console.log(JSON.stringify(error));
- }, options);
- }
- </script>
-</head>
-<body>
- <button onclick="getImage()">Upload a Photo</button>
-</body>
+  <body ng-app="CallApp" resize="">
+    <ion-nav-view></ion-nav-view>
+  </body>
 </html>
